# walette

./: .gitignore  README.md  docker-compose.yaml  run.sh
dummy-app/: Dockerfile  main.py  pyproject.toml
dummy-app/templates/: login.html
walette-holder/: Dockerfile  config.py  dids.py  main.py  models.py  presentation.py  pyproject.toml  storage.py
walette-holder/templates/: entry.html  select.html
walette-issuer/: generate-ca.sh  generate-client-cert.sh  main.py  pyproject.toml
walette-verifier/: Dockerfile  main.py  pyproject.toml  trusted_root.pem  verify.py
