[tool.poetry]
name = "walette-issuer"
version = "0.1.0"
description = ""
authors = ["Joshua Thijssen <jthijssen@noxlogic.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.3"
fastapi = "^0.115.13"
cryptography = "^45.0.4"
jwcrypto = "^1.5.6"
python-jose = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
